--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.btn-success {
+    @apply bg-verde text-white hover:bg-[#4e6856] hover:rounded-lg focus:ring-2 focus:outline-none focus:ring-[#3c5042] mt-2;
+}
+
+.btn-warning {
+    @apply bg-color_secundary text-white hover:bg-[#be9748] focus:ring-2 focus:outline-none focus:ring-[#947538] mt-2;
+}
+
+.fondo_deg_formulario {
+    @apply bg-gradient-to-r from-verde to-dorado h-9;
+}
+
+button {
+    @apply transition ease-out delay-150 text-white font-bold py-2 px-4 mx-1 rounded-md  
+    hover:-translate-y-1 hover:scale-110 duration-300;
+    /* animate-pulse */
+}
+
+.btn-tablas {
+    @apply py-0 px-0 rounded-full hover:bg-blanco;
+}
