--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -14,12 +14,41 @@
     @apply bg-gradient-to-r from-verde to-dorado h-9;
 }
 
-button {
+.button {
     @apply transition ease-out delay-150 text-white font-bold py-2 px-4 mx-1 rounded-md  
     hover:-translate-y-1 hover:scale-110 duration-300;
     /* animate-pulse */
 }
 
+.btn-transition {
+    @apply transition ease-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300;
+}
+
 .btn-tablas {
-    @apply py-0 px-0 rounded-full hover:bg-blanco;
+    @apply py-0 px-0 rounded-full;
+}
+
+textarea {
+    @apply bg-blanco text-textos rounded-md border-verde
+    focus:border-verde focus:outline-none focus:ring-1 focus:ring-verde;
+    /* resize-none */
+}
+
+ /* componentes generales FOCUS */
+ select:focus,
+ input[type="radio"]:focus,
+ input[type="checkbox"]:focus,
+ input[type="text"]:focus,
+ input[type="number"]:focus,
+ input[type="date"]:focus,
+ input[type="password"]:focus {
+     @apply focus:border-verde focus:outline-none focus:ring-1 ring-verde;
+ }
+
+ select {
+    @apply bg-blanco text-textos rounded-md border-verde;
+}
+
+input[type="text"] {
+    @apply bg-blanco text-textos rounded-md border-verde h-10;
 }
