--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,7 +7,7 @@
 }
 
 .btn-warning {
-    @apply bg-gray-500 text-white hover:bg-gray-700 focus:ring-2 focus:outline-none focus:ring-gray-800 mt-2;
+    @apply bg-gray-400 text-white hover:bg-gray-600 focus:ring-2 focus:outline-none focus:ring-gray-800 mt-2;
 }
 
 .fondo_deg_formulario {
@@ -30,7 +30,7 @@
 
 textarea {
     @apply bg-blanco text-textos rounded-md border-verde
-    focus:border-verde focus:outline-none focus:ring-1 focus:ring-verde;
+    focus:border-verde focus:outline-none focus:ring-1 focus:ring-verde placeholder:text-sm;
     /* resize-none */
 }
 
@@ -57,7 +57,7 @@ select {
 
 input[type="text"],
 input[type="email"] {
-    @apply bg-blanco text-textos rounded-md border-verde h-10;
+    @apply bg-blanco text-textos rounded-md border-verde h-10 placeholder:text-sm;
 }
 
 .label-modal {
@@ -66,4 +66,8 @@ input[type="email"] {
 
 .input-modal {
     @apply w-full placeholder:text-sm;
+}
+
+.disabled{
+    @apply disabled:bg-[#e0dddd] disabled:text-[#777171] disabled:border-[#888181] disabled:cursor-not-allowed;
 }
