--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -34,15 +34,20 @@
     input[type="email"] {
         @apply bg-blanco text-textos rounded-md border-verde h-10 placeholder:text-sm;
     }
+
+    input[type="file"] {
+        @apply my-3 file:mr-0 file:h-10 file:border-none file:text-sm file:font-semibold file:bg-[#34778A]
+    file:text-white text-transparent text-[0px] border border-transparent rounded-l-lg bg-transparent hover:file:bg-[#083c49fd] focus:outline-none focus:ring-0 appearance-none cursor-pointer;
+    }
 }
 
 @layer components {
     .btn-success {
-        @apply bg-verde text-white hover:bg-[#4e6856] hover:rounded-lg focus:ring-2 focus:outline-none focus:ring-[#3c5042] mt-2;
+        @apply bg-verde sm:w-auto w-full text-white hover:bg-[#4e6856] hover:rounded-lg focus:ring-2 focus:outline-none focus:ring-[#3c5042] mt-2;
     }
 
     .btn-warning {
-        @apply bg-gray-400 text-white hover:bg-gray-600 focus:ring-2 focus:outline-none focus:ring-gray-800 mt-2;
+        @apply bg-gray-400 sm:w-auto w-full text-white hover:bg-gray-600 focus:ring-2 focus:outline-none focus:ring-gray-800 mt-2;
     }
 
     .fondo_deg_formulario {
