--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -67,6 +67,10 @@
     .btn-tablas {
         @apply py-0 px-0 rounded-full;
     }
+
+    .btn-redondo {
+        @apply bg-verde btn-transition px-3 py-1 rounded-full text-white text-xl focus:ring-2 focus:outline-none focus:ring-verde;
+    }
 }
 
 @layer utilities {
