Estilos y cambio de mensajes a español en login, olvidaste tu contraseña, restablecer contraseña.
Estilos en la pestaña de perfil (para el administrador), estilos y validaciones en la seccion para actualizar el perfil y para actualizar la contraseña.
Agrego pestañas para banners y para asisitentes.
Estilos en el nav.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -31,7 +31,8 @@
     }
 
     input[type="text"],
-    input[type="email"] {
+    input[type="email"],
+    input[type="password"] {
         @apply bg-blanco text-textos rounded-md border-verde h-10 placeholder:text-sm;
     }
 
