--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -48,7 +48,7 @@
     }
 
     .btn-warning {
-        @apply bg-gray-400 sm:w-auto w-full text-white hover:bg-gray-600 focus:ring-2 focus:outline-none focus:ring-gray-800 mt-2;
+        @apply bg-amarillo-300 sm:w-auto w-full text-white hover:bg-amarillo-500 focus:ring-2 focus:outline-none focus:ring-amarillo-700 mt-2;
     }
 
     .fondo_deg_formulario {
