--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -16,6 +16,7 @@
     input[type="text"]:focus,
     input[type="number"]:focus,
     input[type="date"]:focus,
+    input[type="tel"]:focus,
     input[type="email"]:focus,
     input[type="password"]:focus {
         @apply focus:border-verde focus:outline-none focus:ring-1 ring-verde;
@@ -31,6 +32,7 @@
     }
 
     input[type="text"],
+    input[type="tel"],
     input[type="email"],
     input[type="password"] {
         @apply bg-blanco text-textos rounded-md border-verde h-10 placeholder:text-sm;
